[gd_scene load_steps=43 format=2]

[ext_resource path="res://Enemies/dog/dog.gd" type="Script" id=1]
[ext_resource path="res://Enemies/dog/sprites/DogRun.png" type="Texture" id=2]
[ext_resource path="res://Enemies/dog/dog-barking.wav" type="AudioStream" id=3]

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 256, 140 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 256, 0, 256, 140 )

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 512, 0, 256, 140 )

[sub_resource type="AtlasTexture" id=41]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 140, 256, 140 )

[sub_resource type="AtlasTexture" id=42]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 256, 140, 256, 140 )

[sub_resource type="AtlasTexture" id=43]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 512, 140, 256, 140 )

[sub_resource type="AtlasTexture" id=44]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 280, 256, 140 )

[sub_resource type="AtlasTexture" id=45]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 256, 280, 256, 140 )

[sub_resource type="AtlasTexture" id=46]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 512, 280, 256, 140 )

[sub_resource type="AtlasTexture" id=47]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 420, 256, 140 )

[sub_resource type="AtlasTexture" id=48]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 256, 420, 256, 140 )

[sub_resource type="AtlasTexture" id=49]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 256, 140 )

[sub_resource type="AtlasTexture" id=50]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 256, 0, 256, 140 )

[sub_resource type="AtlasTexture" id=51]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 512, 0, 256, 140 )

[sub_resource type="AtlasTexture" id=52]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 140, 256, 140 )

[sub_resource type="AtlasTexture" id=53]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 256, 140, 256, 140 )

[sub_resource type="AtlasTexture" id=54]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 512, 140, 256, 140 )

[sub_resource type="AtlasTexture" id=55]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 280, 256, 140 )

[sub_resource type="AtlasTexture" id=56]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 256, 280, 256, 140 )

[sub_resource type="AtlasTexture" id=57]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 512, 280, 256, 140 )

[sub_resource type="AtlasTexture" id=58]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 420, 256, 140 )

[sub_resource type="AtlasTexture" id=59]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 256, 420, 256, 140 )

[sub_resource type="AtlasTexture" id=60]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 256, 140 )

[sub_resource type="AtlasTexture" id=61]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 256, 0, 256, 140 )

[sub_resource type="AtlasTexture" id=62]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 512, 0, 256, 140 )

[sub_resource type="AtlasTexture" id=63]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 140, 256, 140 )

[sub_resource type="AtlasTexture" id=64]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 256, 140, 256, 140 )

[sub_resource type="AtlasTexture" id=65]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 512, 140, 256, 140 )

[sub_resource type="AtlasTexture" id=66]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 280, 256, 140 )

[sub_resource type="AtlasTexture" id=67]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 256, 280, 256, 140 )

[sub_resource type="AtlasTexture" id=68]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 512, 280, 256, 140 )

[sub_resource type="AtlasTexture" id=69]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 420, 256, 140 )

[sub_resource type="AtlasTexture" id=70]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 256, 420, 256, 140 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ) ],
"loop": true,
"name": "Death",
"speed": 5.0
}, {
"frames": [ SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ) ],
"loop": true,
"name": "Jump",
"speed": 5.0
}, {
"frames": [ SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ), SubResource( 67 ), SubResource( 68 ), SubResource( 69 ), SubResource( 70 ) ],
"loop": true,
"name": "Run",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "Shoot",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=71]
radius = 20.0
height = 76.0

[sub_resource type="RectangleShape2D" id=21]
extents = Vector2( 56, 4 )

[sub_resource type="RectangleShape2D" id=35]
extents = Vector2( 192, 8 )

[sub_resource type="RectangleShape2D" id=36]
extents = Vector2( 192, 8 )

[sub_resource type="RayShape2D" id=72]
length = 56.0

[node name="dog" type="KinematicBody2D" groups=["Enemies"]]
collision_layer = 32
collision_mask = 6
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 11 )
animation = "Jump"
frame = 5

[node name="body" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="body"]
rotation = 1.5708
shape = SubResource( 71 )

[node name="head" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="head"]
position = Vector2( 0, -32 )
shape = SubResource( 21 )

[node name="JumpTimer" type="Timer" parent="."]
one_shot = true

[node name="AimRight" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionRight" type="CollisionShape2D" parent="AimRight"]
position = Vector2( 384, 0 )
shape = SubResource( 35 )

[node name="AimLeft" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionLeft" type="CollisionShape2D" parent="AimLeft"]
position = Vector2( -384, 0 )
shape = SubResource( 36 )

[node name="GravCol" type="CollisionShape2D" parent="."]
shape = SubResource( 72 )

[node name="Voice" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="MindTimer" type="Timer" parent="."]
one_shot = true

[node name="Tween" type="Tween" parent="."]

[node name="RayCastWest" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -64, 0 )
collision_mask = 6

[node name="RayCastEast" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 64, 0 )
collision_mask = 6

[connection signal="Die" from="." to="." method="_on_dog_Die"]
[connection signal="body_entered" from="body" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="head" to="." method="_on_head_body_entered"]
[connection signal="timeout" from="JumpTimer" to="." method="_on_JumpTimer_timeout"]
[connection signal="body_entered" from="AimRight" to="." method="_on_AimRight_body_entered"]
[connection signal="body_entered" from="AimLeft" to="." method="_on_AimLeft_body_entered"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
